# TEST.Web-parser-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  example.xlsx  pyproject.toml
deploy/: .env  docker-compose.yml
deploy/data/: db.sqlite
migrations/: env.py
migrations/versions/: 2025_03_14_0503-fef02a70498e_.py
src/: main.py
src/application/: exceptions.py
src/application/bot/: messages.py  states.py
src/application/bot/keyboards/: inline.py  reply.py
src/application/use_cases/: base.py  collect_products_use_case.py  handle_file_use_case.py
src/domain/: entities.py  interfaces.py
src/domain/services/: file_parser_service.py  web_parser_service.py
src/infrastructure/: models.py  session.py
src/infrastructure/logger/: interfaces.py  logger.py
src/infrastructure/repositories/: base.py  interfaces.py  queries_repository.py  users_repository.py
src/infrastructure/uow/: impl.py  interfaces.py
src/presentation/callbacks/: user_callbacks.py
src/presentation/handlers/: user_handlers.py
user_files/: 5765637028.xlsx
